--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  core:
+    path: core
 
   cupertino_icons: ^1.0.2
+  flutter_svg: ^1.1.5
+  readmore: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -23,4 +27,7 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/
 
