--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,11 @@ dependencies:
     sdk: flutter
   core:
     path: core
-
+  auth:
+    path: auth
+    
   cupertino_icons: ^1.0.2
-  flutter_svg: ^1.1.5
-  readmore: ^2.2.0
+  firebase_core: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -27,7 +28,7 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-
   assets:
     - assets/
+
 
