--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   firebase_core: ^2.1.1
+  firebase_auth: ^4.1.1
+  google_sign_in: ^5.4.2
 
 dev_dependencies:
   flutter_test:
